<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/SPLASH"
    tools:context=".SignUpActivity"
    android:padding="20dp"
    >

    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/welcome"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:text="@string/welcome"
        android:textSize="40sp"
        android:layout_marginTop="-20dp"
        android:textColor="@color/Primary"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_to_start_your_new_journey"
        android:textSize="18sp"
        android:layout_marginTop="-30dp"
        android:textColor="@color/Primary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/user_name"
            app:counterEnabled="true"
            app:counterMaxLength="15"
            app:boxStrokeColor="@color/Primary"
            app:counterTextColor="@color/black"
            android:textColorHint="@color/textColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tfUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/Primary"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/email"
            app:boxStrokeColor="@color/Primary"
            app:hintTextColor="@color/Primary"
            android:textColorHint="@color/textColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tfemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/Primary"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/phone_number"
            app:boxStrokeColor="@color/Primary"
            app:hintTextColor="@color/Primary"
            android:textColorHint="@color/textColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tfphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/Primary"/>
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

<!--    <Button-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/let_s_go"-->
<!--        style="@style/BUTTON"/>-->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/let_s_go"
        style="@style/BUTTON"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_accoun_t_login"
        android:background="@color/Transparant"
        android:textColor="@color/black"/>



</LinearLayout>