<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataProfile"
    style="@style/SCREENDATA">

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_akan_tampil_disini"
        android:textColor="#ffff"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_marginTop="280dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/data_email_disini"
        android:textAlignment="center"
        android:layout_below="@id/tvUsername"
        android:textColor="#ffff"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvPhone"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data_nomor_telepon_disini"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_below="@id/tvEmail"
        android:textStyle="bold"
        android:textColor="#ffff"
        />

</RelativeLayout>